add styles to news items

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="news">
         <div class="container">
             <div class="news__item">
-                <img src="" alt="">
-                <div></div>
+                <img class="news__img" src="img/falcon.jpg" alt="">
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, odit, ducimus! Error ipsam, laboriosam facere iure magni odit ut, magnam numquam illum corporis in mollitia. A cupiditate, dicta odit ratione.</div>
             </div>
             <div class="news__item">
-                <img src="" alt="">
-                <div></div>
+                <img class="news__img" src="img/falcon.jpg" alt="">
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta animi, quod cumque ut eius ipsum fuga deserunt facilis ea voluptates atque, sequi amet officiis, laborum mollitia minima, illo. Nihil, cum.</div>
             </div>
             <div class="news__item">
-                <img src="" alt="">
-                <div></div>
+                <img class="news__img" src="img/falcon.jpg" alt="">
+                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores necessitatibus laborum cum vero repudiandae et explicabo magni eaque blanditiis. Placeat et consectetur officia quos, similique, temporibus odit tempore assumenda iusto!</div>
             </div>
         </div>
     
